--- a/data-science.html
+++ b/data-science.html
@@ -136,7 +136,7 @@ Scientist ? Assistant Director drives forward the Business Value Creation...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Apply online for the job of Data Scientist at CACI Ltd.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thehutgroup.workable.com/j/37F3E68EDA?viewed=true'>The Hut Group - Jobs: Fraud Junior Data Scientist - Apply online</a></h5> 
+<h5><a href='https://thehutgroup.workable.com/j/37F3E68EDA?viewed=true'>The Hut Group - Jobs: Fraud Junior Data Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Fraud Junior Data Scientist at The Hut Group.</p>
 <hr/>
@@ -199,7 +199,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light">Shanghai Shanghai, China</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/data-scientist-natural-language-processing'>
+<h5><a href='https://definedcrowd.recruitee.com/o/data-scientist-natural-language-processing'>
       Data Scientist ? Natural Language Processing - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
@@ -230,7 +230,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p>Jul 13, 2019 ... Product Data Scientist - Analytics. Paris, France. Product. Permanent. Submit 
 your application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/nobul/f010c08d-5ee1-4739-8d11-d505854da439'>Nobul - Data Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/nobul/f010c08d-5ee1-4739-8d11-d505854da439'>Nobul - Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... We are looking for a Data Scientist to develop a revenue generating, predictive, 
 intelligent, learning algorithm. The algorithm will ingest market analytics and?...</p>
@@ -241,7 +241,7 @@ intelligent, learning algorithm. The algorithm will ingest market analytics and?
 Engineering. full-time. Submit your application. Resume/CV. ATTACH RESUME/
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/perpetualabs.com/e3c1df80-de35-4f78-8ae7-2dd3f6ea79be/apply'>Perpetua Labs - Data Scientist, Product - Toronto</a></h5> 
+<h5><a href='https://jobs.lever.co/perpetualabs.com/e3c1df80-de35-4f78-8ae7-2dd3f6ea79be/apply'>Perpetua Labs - Data Scientist, Product - Toronto</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Data Scientist, Product - Toronto. Toronto. Product. Full-time. Submit your 
 application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
@@ -266,7 +266,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oZ6P9fwN'>The Havas Group Careers - Data Science Director - Media</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oZ6P9fwN'>The Havas Group Careers - Data Science Director - Media</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -310,7 +310,7 @@ and artificial intelligence advances? In an increasingly connected world, massiv
 and artificial intelligence advances? In an increasingly connected world, massive
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/uipath/3171ccce-9e90-47a1-b800-11b4c75c4821'>UiPath - Senior Customer Data Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/uipath/3171ccce-9e90-47a1-b800-11b4c75c4821'>UiPath - Senior Customer Data Scientist</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -332,7 +332,7 @@ and artificial intelligence advances? In an increasingly connected world, massiv
 <p><span class="badge badge-light">Columbus, OH, USA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://westernun.referrals.selectminds.com/jobs/junior-data-scientist-19557'>Junior Data Scientist - Western Union Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westernun.referrals.selectminds.com/jobs/junior-data-scientist-19557'>Junior Data Scientist - Western Union Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Thanks for your interest in the Junior Data Scientist position. Unfortunately this 
 position has been closed but you can search our 172 open jobs by clicking here.</p>
@@ -380,7 +380,7 @@ federal?...</p>
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KellyServicesEu/743999676252687-data-scientist-gai'>Kelly Services Data Scientist - GAI | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KellyServicesEu/743999676252687-data-scientist-gai'>Kelly Services Data Scientist - GAI | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, UK</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -396,7 +396,7 @@ federal?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='http://pitchup.applytojob.com/apply/PNwdCR4N3Y/Data-Scientist'>Data Scientist - Pitchup.com - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pitchup.applytojob.com/apply/PNwdCR4N3Y/Data-Scientist'>Data Scientist - Pitchup.com - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
